--- a/index.css
+++ b/index.css
@@ -48,3 +48,22 @@
     width: 100%;
     height: 100px;
 }
+
+
+.footer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.footer .author {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+.footer .author>a {
+    color: #000000;
+}
