--- a/index.css
+++ b/index.css
@@ -29,6 +29,10 @@ h1, h2, h3, h4, h5, h6, p {
     border-radius: 5px;
     padding: 30px 20px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .avianca__subtitle {
@@ -41,7 +45,7 @@ h1, h2, h3, h4, h5, h6, p {
     padding: 10px;
     width: 95%;
     margin: auto;
-    box-sizing: 10px 10px 5px #000000;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
     background-color: var(--color-white);
     border-radius: 5px;
 }
@@ -52,14 +56,16 @@ h1, h2, h3, h4, h5, h6, p {
     background-color: var(--color-three);
     text-align: center;
     border-radius: 32px;
-    width: 50px;
+    width: 40px;
     font-weight: 600;
+    font-size: 15px;
 }
 
 .avianca__card__title {
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
+    color: var(--color-text);
 }
 
 .avianca__actions_container {
@@ -113,4 +119,12 @@ h1, h2, h3, h4, h5, h6, p {
 .avianca__author {
     display: flex;
     gap: 5px;
+}
+
+.avianca__logo__evolutivos {
+    background-image: url(./images/icon-48.png);
+    background-position: center;
+    background-size: cover;
+    height: 50px;
+    width: 50px;
 }
